--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="/src/index.tsx"></script>
+		<script prerender type="module" src="/src/index.tsx"></script>
 	</body>
 </html>
